# embedded_cpp_prog

./: .gitignore  .gitmodules  CMakeLists.txt  build.sh  sizet.cpp
CppUTest/: CppUTest.pro  UTest4SprintfFunction.cpp  main.cpp
Easy_Jump_Start/: CMakeLists.txt
Easy_Jump_Start/src/: CMakeLists.txt  basic_classes_templates.cpp  basic_classes_templates.hpp  main.cpp  mcal.cpp  mcal.hpp  misc.cpp  misc.hpp  stl_container.cpp  stl_container.hpp
Easy_Jump_Start/test/: CMakeLists.txt  test_basic_classes_templates.cc  test_main.cpp  test_stl_container.cc
LED_Blinking_Firmware/: CMakeLists.txt  led.cpp  led.hpp  main.cpp
LED_Blinking_Firmware/mcal/: mcal.cpp  mcal.hpp  mcal_chrono.cpp  mcal_reg_access.cpp  mcal_reg_access.hpp
LED_Blinking_Firmware/mcal/avr/: mcal_cpu.cpp  mcal_cpu.hpp  mcal_gpt.cpp  mcal_gpt.hpp  mcal_irq.cpp  mcal_irq.hpp  mcal_memory_progmem.cpp  mcal_memory_progmem.hpp  mcal_reg.hpp
LED_Blinking_Firmware/mcal_memory/: mcal_memory_progmem_access.hpp
LED_Blinking_Firmware/util/STL/: algorithm  any  array  atomic  basic_string  cfloat  chrono  climits  cmath  complex  cstdbool  cstddef  cstdfloat  cstdint  cstdlib  ctime  functional  initializer_list  iterator  limits  memory  numeric  ratio  stdfloat.h  string  time.h  tuple  type_traits  utility  vector
LED_Blinking_Firmware/util/STL/impl/: allocator_impl.h  stl_local_constexpr.h  stl_local_noexcept.h
LED_Blinking_Firmware/util/STL/impl/avr/: avr_atomic.h  avr_float_limits.cpp
LED_Blinking_Firmware/util/utility/: util_alignas.h  util_bit_mask.h  util_circular_buffer.h  util_communication.h  util_countof.h  util_dynamic_array.h  util_linear_interpolate.h  util_noexcept.h  util_noncopyable.h  util_nothing.h  util_null_ptr_workaround.h  util_point.h  util_stopwatch.h  util_time.cpp  util_time.hpp  util_two_part_data_manipulation.h  util_utype_helper.hpp
LED_MCU_Atmel_ATmega328P_Firmware/: build.sh  led.cpp  led.hpp  main.cpp  mcal_reg.h  target_circuit.sim1
LedDriver/: circular_buffer.c  circular_buffer.h  main.c
LedDriver/LED_Driver/: led_driver.c  led_driver.h
LedDriver/mocks/: RuntimeErrorStub.h
OOP4MCU/: CMakeLists.txt
OOP4MCU/firmware/: CMakeLists.txt  led_app.cpp  led_app.hpp  led_base.cpp  led_base.hpp  led_port.cpp  led_port.hpp  led_pwm.cpp  led_pwm.hpp  main.cpp  pwm.cpp  pwm.hpp
OOP4MCU/unit_test/: CMakeLists.txt  main.cpp
UnityTest/: UTest4Sprintf.c  UnityTest.pro  main.c  unity_fixture.c  unity_fixture.h
avr-led-blink/: blink.c
embedded_unit_test/LedDriver/: LedDriver.pro
embedded_unit_test/LedDriver/LED_Driver/: test_led_driver.c
embedded_unit_test/LedDriver/mocks/: RuntimeErrorStub.c
embedded_unit_test/LedDriver/util/: RuntimeError.h
enconv/: CMakeLists.txt  receiver_main.cpp  sender.hpp  sender.mk  sender_main.cpp
fixed_types/: CMakeLists.txt  build.sh  fixed_types.cpp
misc/: endianness.cpp  sizet.cpp
misc/enconv/: receiver.cpp  receiver.hpp  receiver.mk  sender.cpp  sender.mk  sender_main.cpp
unity.test.framework/extras/fixture/: unity_fixture.c  unity_fixture.h
unity.test.framework/extras/memory/: unity_memory.c
